force-app/main/default/objects/SVMXC__Work_Order_Resource__c/SVMXC__Work_Order_Resource__c.object-meta.xml
<CustomObject>
    <description>This junction object between Work Order and Technician is used to manage the Resource&apos;s (Technician&apos;s) association on the Work Order. It is used to manage Mandatory, Preferred, Prohibited Resources (Technicians) for the Work Order.</description>
    <label>Work Order Resource</label>
    <nameField>
        <displayFormat>WOR-{00000000}</displayFormat>
        <label>Work Order Resource Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>