force-app/main/default/objects/SVMXC__Work_Order_Resource__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Added as Part of User Story DCP-25271.
Maps the Account Name from Work Order to the Work Order Resource.</description>
    <formula>SVMXC__Work_Order__r.SVMXC__Company__r.Name</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>