force-app/main/default/objects/SVMXC__Work_Order_Resource__c/fields/Check_Logged_In_Technician__c.field-meta.xml
<CustomField>
    <fullName>Check_Logged_In_Technician__c</fullName>
    <description>This Field is used in the list view to filter out  the records for the Logged in Technician.</description>
    <formula>$User.Id == SVMXC__Group_Member__r.SVMXC__Salesforce_User__r.Id</formula>
    <label>Check Logged In Technician</label>
    <type>Checkbox</type>
</CustomField>