force-app/main/default/objects/SVMXC__Work_Order_Resource__c/fields/Installation_Stage__c.field-meta.xml
<CustomField>
    <fullName>Installation_Stage__c</fullName>
    <description>To find the installation stage based on the work order&apos;s installed product.</description>
    <formula>SVMXC__Work_Order__r.Installation_Stage__c</formula>
    <label>Installation Stage</label>
    <type>Text</type>
</CustomField>