force-app/main/default/objects/SVMXC__Work_Order_Resource__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if the resource is a Primary Work Order Resource. For Non-Installation WO , the WO Field support is assigned as Primary WOR and for Installation WO&apos;s , the Primary FSE is assigned as Primary WOR .</description>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>