force-app/main/default/objects/SVMXC__Work_Order_Resource__c/fields/SVMXC__Group_Member__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Group_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Technician</label>
    <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
    <relationshipLabel>Work Order Resources</relationshipLabel>
    <relationshipName>Work_Order_Resources</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>