force-app/main/default/objects/SVMXC__Work_Order_Resource__c/fields/SVMXC__Preference_Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Preference_Type__c</fullName>
    <label>Resource Preference Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Preferred</fullName>
                <default>true</default>
                <label>Preferred</label>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
            <value>
                <fullName>Prohibited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>