force-app/main/default/objects/SVMXC__Work_Order_Resource__c/validationRules/PreventWOresourceCreationOnStatusClosed.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventWOresourceCreationOnStatusClosed</fullName>
    <active>true</active>
    <description>Prevent user from creating any work order resource record when the corresponding Work order is closed/completed.</description>
    <errorConditionFormula>AND(NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
    NOT($Profile.Name ==$Label.Integration_SAP_Service),
    NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
    NOT($User.FirstName ==$Label.Automated_Process_User),
		NOT(/*Bypass for Account Maintenance and Presales type Work Orders*/
    AND(
         SVMXC__Work_Order__r.RecordType.Name = $Label.WorkOrderRecordTypeServiceSupport,
        OR(
            TEXT(SVMXC__Work_Order__r.SVMXC__Order_Type__c)=$Label.WorkOrderTypeAccountMaintenance,
            TEXT(SVMXC__Work_Order__r.SVMXC__Order_Type__c)=$Label.WorkOrderTypePresales
        )
    )
/*Bypass for Account Maintenance and Presales type Work Orders*/
),
OR(TEXT(SVMXC__Work_Order__r.SVMXC__Order_Status__c) == 
$Label.WorkOrderStatusCompleted, 
TEXT(SVMXC__Work_Order__r.SVMXC__Order_Status__c) == 
$Label.WorkOrderStatusClosed , 
TEXT(SVMXC__Work_Order__r.SVMXC__Order_Status__c) == 
$Label.WorkOrderStatusReopenRequested, 
AND(TEXT(SVMXC__Work_Order__r.SVMXC__Order_Status__c) == &apos;Canceled&apos;,NOT(SVMXC__Work_Order__r.SVMXC__Is_PM_Work_Order__c),NOT(TEXT(SVMXC__Work_Order__r.SVMXC__Order_Type__c) = &apos;Preventative Maintenance&apos;)) 

))</errorConditionFormula>
    <errorMessage>Work Order Resources can not be added/updated/deleted once a Work Order is Completed/Closed/Reopen Requested/Canceled.</errorMessage>
</ValidationRule>