force-app/main/default/objects/SVMXC__Work_Order_Resource__c/listViews/My_Work_Order_Resources.listView-meta.xml
<ListView>
    <fullName>My_Work_Order_Resources</fullName>
    <columns>NAME</columns>
    <columns>SVMXC__Work_Order__c</columns>
    <columns>Work_Order_Status__c</columns>
    <columns>Installation_Stage__c</columns>
    <columns>Training_Required__c</columns>
    <columns>Subject__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Schedule_Date_Time__c</columns>
    <columns>Primary__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Check_Logged_In_Technician__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Work Order Resources</label>
    <language>en_US</language>
</ListView>